# ohos_device_board_ingchips

./: BUILD.gn  Kconfig.liteos_m.boards  Kconfig.liteos_m.defconfig  Kconfig.liteos_m.defconfig.boards  Kconfig.liteos_m.shields  Kconfig.liteos_m.soc
data/: gatt.profile  setup_soc916.cgen  setup_soc918.cgen
hal_liteos/: BUILD.gn  gen_os_impl.c  main.c  profile.c  target_config.h  task_sample.c
hcs/: BUILD.gn  ingchips.hcs
ing916/: BUILD.gn  Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.shield  README.md  flash_download.ini  ing918.ingw  ohos.build  script.jlink
ing916/components/: BUILD.gn
ing916/components/fs/: BUILD.gn  fs_init.c
ing916/liteos_m/: BUILD.gn  config.gni  ing916.ld  startup_ing91600.s
ing9187/: Kconfig.liteos_m.defconfig.ing9187  Kconfig.liteos_m.defconfig.series  flash_download.ini  ohos.build
ing9187/components/: BUILD.gn
ing9187/components/fs/: BUILD.gn  fs_init.c
ing9187/components/spi_flash/: BUILD.gn
ing9187/components/watchdog/: hi_watchdog.c
ing9187/liteos_m/: BUILD.gn  config.gni  ing9187.ld  startup_ing91800.s
ing9188/: BUILD.gn  Kconfig.liteos_m.defconfig.ing918  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.soc  ohos.build
ing9188/components/: BUILD.gn
ing9188/components/fs/: BUILD.gn
ing9188/components/spi_flash/: BUILD.gn
ing9188/components/spi_flash/include/: w25qxx.h
ing9188/components/spi_flash/src/: w25qxx.c
ing9188/components/watchdog/: BUILD.gn  hi_watchdog.h
ing9188/liteos_m/: BUILD.gn  config.gni  ing9188.ld
system/: BUILD.gn  dprintf.c  system.c  uart.c
