# Copyright (c) 2025 INGCHIPS.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# import("//build/lite/config/component/lite_component.gni")
# import("//build/lite/config/subsystem/lite_subsystem.gni")
import("//kernel/liteos_m/liteos.gni")

module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
    sources = [
        "gen_os_impl.c", 
        "main.c",
        "profile.c",
        "task_sample.c",
    ]

}

config("public") {
    ldflags = [
        "-Wl,-u_printf_float",
    ]
    libs = [
        "c",
        "m",
        "nosys",
    ]
        include_dirs = [ 
        rebase_path("."),
        "//opt/gcc-arm-none-eabi-10/arm-none-eabi/include",
        "//commonlibrary/utils_lite/include",
        "//commonlibrary/utils_lite/memory/include",
        "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog_lite",
        "//kernel/liteos_m/components/power"
    ]
}


